test/libyul/yulSyntaxTests/objects/subobject_hex_name.yul
object "A" {
  code {}
  object hex"11" {
    code {}
  }
}
// ----
// ParserError 2314: (32-39='hex"11"'): Expected 'StringLiteral' but got 'HexStringLiteral'
